try to use float instead of inline-block to see if it fixes decimal alignment in #11

--- a/app.css
+++ b/app.css
@@ -147,14 +147,15 @@
 
 [app="app.balzdash"] #heading .label,
 [app="app.balzdash"] #avg-fuel-cons .label {
-	display: inline-block;
+	float: right;
 	margin-right: 8px;
 	opacity: .7;
 }
 [app="app.balzdash"] #heading .value,
 [app="app.balzdash"] #avg-fuel-cons .value {
-	display: inline-block;
+	float: right;
 	width: 40px;
+	clear: right;
 }
 
 
